feature/product-page - Доработки по проекту

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "strictPropertyInitialization": true,
     "module": "commonjs",
     "target": "es5",
+    "lib": ["es6", "dom"],
     "jsx": "react",
     "allowJs": true,
     "baseUrl": "./",
