--- a/.eslintrc
+++ b/.eslintrc
@@ -45,7 +45,7 @@
         "max-len": [
             "error",
             {
-            "code": 80,
+            "code": 150,
             "ignoreComments": true,
             "ignoreUrls": true,
             "ignoreTrailingComments": true
@@ -107,7 +107,7 @@
         "max-lines-per-function": [
             "error",
             {
-            "max": 50,
+            "max": 150,
             "skipBlankLines": true,
             "skipComments": true
             }
@@ -158,7 +158,7 @@
         "vars-on-top": "error",
         "yoda": "error",
         "init-declarations": ["error", "always"],
-        "no-shadow": "error",
+        "no-shadow": "off",
         "no-undef-init": "error",
         "no-use-before-define": 0,
         "array-bracket-spacing": ["error", "never"],
@@ -236,7 +236,7 @@
         "no-whitespace-before-property": "error",
         "object-curly-spacing": ["error", "always"],
         "object-property-newline": "error",
-        "space-before-function-paren": "error",
+        "space-before-function-paren": "off",
         "arrow-body-style": ["error", "as-needed"],
         "arrow-spacing": [
           "error",
