--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.20",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
@@ -66,16 +67,18 @@
     "tsconfig-paths-webpack-plugin": "^3.5.2",
     "typescript": "^4.5.0",
     "typescript-plugin-css-modules": "^3.4.0",
-    "webpack": "^5.61.0",
     "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
     "xml-loader": "^1.2.1"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.2.2",
+    "@mui/x-data-grid-generator": "^5.2.2",
+    "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
     "eslint-plugin-optimize-regex": "^1.2.1",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -85,6 +88,8 @@
     "react-router-dom": "^5.2.0",
     "react-svg": "^14.1.7",
     "redux": "^4.1.2",
-    "redux-devtools-extension": "^2.13.9"
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3"
   }
 }
