feature/mock-service-worker - Добавлен Mock Service Worker, Добалена имитация базы данных

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,9 +40,14 @@
       "@features/*": ["src/features/*"],
       "@store/*": ["src/store/*"],
       "@store": ["src/store/index.ts"],
+      "@api/*": ["src/api/*"],
+      "@api": ["src/api/index.ts"],
+      "@database": ["src/database/index.ts"],
+      "@mocks": ["src/mocks/index.ts"],
     }
   },
   "include": [
-    "src/**/*.*"
-, "tsconfig.eslint.json"  ],
+    "src/**/*.*",
+    "tsconfig.eslint.json"
+  ],
 }
