--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "webpack",
     "react",
     "redux",
-    "material-ui"
+    "redux-thunk",
+    "material-ui",
+    "styled-components",
+    "Mock Service Worker",
+    "axios"
   ],
   "author": "Popovich O.I <91popovich.oleg@gmail.com>",
   "license": "ISC",
@@ -58,6 +62,7 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "mini-css-extract-plugin": "^2.4.3",
+    "msw": "^0.36.8",
     "normalize.css": "^8.0.1",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
@@ -78,6 +83,8 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.2.2",
     "@mui/x-data-grid-generator": "^5.2.2",
+    "@types/axios": "^0.14.0",
+    "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
     "eslint-plugin-optimize-regex": "^1.2.1",
@@ -91,5 +98,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
