--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "material-ui",
     "styled-components",
     "Mock Service Worker",
-    "axios"
+    "axios",
+    "Socket.io",
+    "yup"
   ],
   "author": "Popovich O.I <91popovich.oleg@gmail.com>",
   "license": "ISC",
@@ -34,12 +36,15 @@
     "@babel/preset-typescript": "^7.16.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@types/emoji-mart": "^3.0.9",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.7",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.20",
+    "@types/tinycolor2": "^1.4.3",
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
@@ -78,6 +83,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.8",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
@@ -87,17 +93,29 @@
     "axios": "^0.26.0",
     "classnames": "^2.3.1",
     "connected-react-router": "^6.9.1",
+    "date-fns": "^2.28.0",
+    "dotenv": "^8.0.0",
+    "emoji-mart": "^3.0.1",
     "eslint-plugin-optimize-regex": "^1.2.1",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "formik": "^2.2.9",
+    "http": "0.0.1-security",
+    "prettier": "^2.6.2",
+    "rc-upload": "^4.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.28.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-svg": "^14.1.7",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
-    "styled-components": "^5.3.3"
+    "socket.io-client": "^2.2.0",
+    "styled-components": "^5.3.3",
+    "tinycolor2": "^1.4.2",
+    "webpack": "^5.71.0",
+    "yup": "^0.32.11"
   },
   "msw": {
     "workerDirectory": "public"
